nameserver/daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nameserver
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: nameserver
  template:
    metadata:
      labels:
        app: nameserver
    spec:
      securityContext:
        sysctls:
          - name: net.ipv4.ip_local_port_range
            value: "1024 65535"
      containers:
        - name: nameserver
          image: ghcr.io/pmh-only/technitium:latest
          ports:
          - containerPort: 53443
            hostPort: 53443
            protocol: TCP
          - containerPort: 53
            hostPort: 53
            protocol: TCP
          - containerPort: 53
            hostPort: 53
            protocol: UDP
          volumeMounts:
            - name: nameserver
              mountPath: /etc/dns
            - name: tls
              mountPath: /etc/keystore.p12
              subPath: keystore.p12
      volumes:
        - name: tls
          secret:
            secretName: nameserver-tls-secret
        - name: nameserver
          hostPath:
            path: /etc/dns
