nameserver/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nameserver
spec:
  clusterIP: 172.17.0.20
  selector:
    app: nameserver
  ports:
    - name: webconsole
      protocol: TCP
      port: 5380
      targetPort: 5380

    - name: dns
      protocol: UDP
      port: 53
      targetPort: 53

    - name: dnstcp
      protocol: TCP
      port: 53
      targetPort: 53

    - name: doh
      protocol: TCP
      port: 80
